force-app/main/default/objects/AccountHistory__c/AccountHistory__c.object-meta.xml
<CustomObject>
    <description>연혁</description>
    <label>Account History</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>