force-app/main/default/objects/AccountHistory__c/fields/BizRegNo__c.field-meta.xml
<CustomField>
    <fullName>BizRegNo__c</fullName>
    <description>사업자번호</description>
    <label>Biz. Reg. No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>