force-app/main/default/objects/AccountHistory__c/fields/DeleteExtId__c.field-meta.xml
<CustomField>
    <fullName>DeleteExtId__c</fullName>
    <externalId>true</externalId>
    <label>DeleteExtId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>