force-app/main/default/objects/AccountHistory__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>연혁내용</description>
    <label>History Contents</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>