force-app/main/default/objects/AccountHistory__c/fields/HistoryDate__c.field-meta.xml
<CustomField>
    <fullName>HistoryDate__c</fullName>
    <description>연혁 날짜</description>
    <label>History Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>